--- a/book.bib
+++ b/book.bib
@@ -23,3 +23,42 @@
   year={2015},
   publisher={National Acad Sciences}
 }
+
+@book{raykov2011introduction,
+  title={Introduction to psychometric theory},
+  author={Raykov, Tenko and Marcoulides, George A},
+  year={2011},
+  publisher={Routledge}
+}
+
+@Article{Jorgensen2021Howestimateabsolute,
+  author    = {Jorgensen, Terrence D.},
+  journal   = {Psych},
+  title     = {How to estimate absolute-error components in structural equation models of generalizability theory},
+  year      = {2021},
+  month     = {may},
+  number    = {2},
+  pages     = {113--133},
+  volume    = {3},
+  doi       = {10.3390/psych3020011},
+  file      = {:Files/2021/Jorgensen2021Howestimateabsolute.pdf:PDF},
+  groups    = {Measurement},
+  owner     = {wmmurrah},
+  publisher = {{MDPI} {AG}},
+}
+
+@Article{Raykov2006Estimationgeneralizabilitycoefficients,
+  author    = {Raykov, Tenko and Marcoulides, George A.},
+  journal   = {International Journal of Testing},
+  title     = {Estimation of generalizability coefficients via a structural equation modeling approach to scale reliability evaluation},
+  year      = {2006},
+  month     = {mar},
+  number    = {1},
+  pages     = {81--95},
+  volume    = {6},
+  doi       = {10.1207/s15327574ijt0601_5},
+  file      = {:Files/2006/Raykov2006Estimationgeneralizabilitycoefficients.pdf:PDF},
+  groups    = {Measurement},
+  owner     = {wmmurrah},
+  publisher = {Informa {UK} Limited},
+}
